--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -2,7 +2,7 @@
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/iv"
-    android:layout_width="200dp"
+    android:layout_width="match_parent"
     android:background="#000"
-    android:layout_height="wrap_content"/>
+    android:layout_height="match_parent"/>
 
